# gifmeta

./: .gitignore  CHANGELOG.md  README.md  gifdump.py  pyproject.toml  setup.cfg
gifmeta/: __init__.py  constants.py  gif.py
