[metadata]
name = gifmeta
version = attr: gifmeta.__version__
author = a-bison
author_email = aliteralbison@protonmail.com
description = A barebones module for reading GIF metadata.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a-bison/scrolls-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.6
install_requires =
    mmaputils~=0.1.0